# julia-set-rs

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  crates.js  deny.toml  help.html  install-pocl.sh  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yml  rust.yml
benches/: basics.rs  render.rs
examples/: cli.rs  generate-example.sh
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/core/str/traits/: trait.FromStr.js
implementors/julia_set/transform/: trait.ApplyTransform.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
julia_set/: all.html  index.html  sidebar-items.js  struct.Cpu.html  struct.CpuProgram.html  struct.FnError.html  struct.Function.html  struct.OpenCl.html  struct.OpenClProgram.html  struct.Params.html  struct.Vulkan.html  struct.VulkanProgram.html  trait.Backend.html  trait.ComputePoint.html  trait.Render.html  type.ImageBuffer.html
julia_set/cpu/: struct.Cpu.html  struct.CpuProgram.html  trait.ComputePoint.html
julia_set/function/: struct.FnError.html  struct.Function.html
julia_set/opencl/: struct.OpenCl.html  struct.OpenClProgram.html
julia_set/transform/: index.html  sidebar-items.js  struct.ImageAndTransform.html  struct.Negative.html  struct.Palette.html  struct.Smoothstep.html  trait.ApplyTransform.html  trait.PixelTransform.html
julia_set/vulkan/: struct.Vulkan.html  struct.VulkanProgram.html
search.desc/julia_set/: julia_set-desc-0-.js
search.index/: 168ace75e0a8.js  187ef90fc3af.js  20967ff75e90.js  3cf5c6bb8520.js  4c2348e636cb.js  4edc943be47f.js  57339b9d9721.js  58f7a416184d.js  603ed5e60dda.js  7dd9fc7be887.js  root.js
search.index/crateNames/: c324b617a349.js
search.index/desc/: 95db4ba8ab9f.js
search.index/entry/: 8b1953c30b5e.js
search.index/function/: 43bdb831a092.js
search.index/generic_inverted_index/: 2cc000c367f3.js
search.index/name/: 6a1f35aa4109.js
search.index/normalizedName/: 3bcdc9b54ac0.js
search.index/path/: f3e5a645245b.js
search.index/type/: be49945623f7.js
src/: compiler.rs  cpu.rs  function.rs  lib.rs  opencl.rs  program.cl  program.glsl  transform.rs  vulkan.rs
src/julia_set/: compiler.rs.html  cpu.rs.html  function.rs.html  lib.rs.html  opencl.rs.html  transform.rs.html  vulkan.rs.html
tests/: references.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
trait.impl/julia_set/: trait.Render.js
trait.impl/julia_set/transform/: trait.PixelTransform.js
type.impl/image/buffer_/: type.GrayImage.js
type.impl/image/images/buffer/: type.GrayImage.js
