[package]
name = "julia-set"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["julia", "fractal", "graphics", "opencl", "vulkan"]
categories = ["mathematics", "multimedia::images", "rendering"]
description = "Julia set computation and rendering"
repository = "https://github.com/slowli/julia-set-rs"

[badges]
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
all-features = true
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.100"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg"] }
num-complex = "0.4.6"
thiserror = "2.0.17"

# OpenCL backend
ocl = { version = "0.19.7", optional = true }
lazy_static = { version = "1.5.0", optional = true }
# Vulkan backend
shaderc = { version = "0.10.1", optional = true }
vulkano = { version = "0.35.2", optional = true }
# CPU backend
rayon = { version = "1.11.0", optional = true }

[dependencies.arithmetic-parser]
version = "0.3.0"
git = "https://github.com/slowli/arithmetic-parser.git"
rev = "b03e8cf6945f2ad2cc2d95a2f0fbf1651ef8e53b"
features = ["num-complex"]
optional = true

[dev-dependencies]
clap = { version = "4.5.51", features = ["derive"] }
criterion = "0.7.0"
doc-comment = "0.3.4"
version-sync = "0.9.1"

[features]
default = []
# Enables the Vulkan backend (GPU-based).
vulkan_backend = ["arithmetic-parser", "shaderc", "vulkano"]
# Enables the OpenCL backend (GPU-based).
opencl_backend = ["arithmetic-parser", "ocl", "lazy_static"]
# Enables the CPU backend with native functions.
cpu_backend = ["rayon"]
# Enables the CPU backend with support of dynamically defined functions.
dyn_cpu_backend = ["cpu_backend", "arithmetic-parser"]

[[test]]
name = "references"
path = "tests/references.rs"
required-features = ["cpu_backend"]

[[example]]
name = "cli"
path = "examples/cli.rs"
required-features = ["dyn_cpu_backend"]
# TODO: strictly speaking, we need any of 3 "dynamic" backends, but the manifest
#   seemingly doesn't allow to express this.

[[bench]]
name = "basics"
harness = false
required-features = ["dyn_cpu_backend"]
path = "benches/basics.rs"

# Speed up snapshot testing.
[profile.dev.package.julia-set]
opt-level = 2
